fixed alignments and columns

--- a/css/style.css
+++ b/css/style.css
@@ -259,15 +259,7 @@ footer p{
 .col-11 {width: 91.66%;}
 .col-12 {width: 100%;}*/
 
-[class*="col-"] {
-  float: left;
-  padding: 20px;
-}
-.row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
+
 
 
 /* ====RESPONSIVE==== */
@@ -361,6 +353,9 @@ Medium devices (640px and larger)
   .centered {
     text-align: center;
   }
+  .centered-tablet {
+    text-align: center;
+  }
   .col-md-1 {width: 8.33%;}
 .col-md-2 {width: 16.66%;}
 .col-md-3 {width: 25%;}
@@ -373,6 +368,15 @@ Medium devices (640px and larger)
 .col-md-10 {width: 83.33%;}
 .col-md-11 {width: 91.66%;}
 .col-md-12 {width: 100%;}
+[class*="col-"] {
+  float: left;
+  padding: 20px;
+}
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
 }
 
 
@@ -432,6 +436,9 @@ Large devices (1024px or larger)
   } 
   .centered {
     text-align: center;
+  }
+  .left-align-desktop {
+    text-align: left;
   }
   footer{
     padding: 0 50px;
